--- a/app/views/layinghens/current/eligibility/aviary/features.html
+++ b/app/views/layinghens/current/eligibility/aviary/features.html
@@ -84,7 +84,7 @@
                 <span class="app-step-nav-related__pretitle">Eligibility</span>
                 </h2>
                 <p>
-                    The aviary system must have integrated manure removal belts and a non-flicker LED lighting system.
+                    The aviary system must have integrated manure removal belts and a non-flicker LED lighting system to optimise the housing environment for the birds.
                 </p>
             </div>
 
