--- a/app/views/layinghens/current/eligibility/biosecurity/egg-store.html
+++ b/app/views/layinghens/current/eligibility/biosecurity/egg-store.html
@@ -6,7 +6,7 @@
 {% endif %}
 
 {% block pageTitle %}
-    Will there be direct external access from the building to the egg store?
+    Will there be direct external access to the building’s egg store?
 {% endblock %}
 
 {% block content %}
@@ -23,7 +23,7 @@
                     classes: 'govuk-radios--inline',
                     fieldset: {
                         legend: {
-                            text: 'Will there be direct external access from the building to the egg store?',
+                            text: 'Will there be direct external access to the building’s egg store?',
                             isPageHeading: true,
                             classes: 'govuk-fieldset__legend--l'
                         }
