--- a/app/views/layinghens/current/eligibility/building/items.html
+++ b/app/views/layinghens/current/eligibility/building/items.html
@@ -31,7 +31,7 @@
                             water-tight roof and walls
                         </li>
                         <li>
-                            mesh capping applied to any roof or wall inlets and outlets capped with mesh (with a mesh hole size of 25 millimetres or less)
+                            mesh capping applied to any roof or wall inlets and outlets capped with mesh (using a mesh hole size of 25 millimetres or less)
                         </li>
                         <li>
                             catch trays under any chimneys and roof-mounted vents
@@ -89,7 +89,7 @@
                 <span class="app-step-nav-related__pretitle">Eligibility</span>
                 </h2>
                 <p>
-                    When the project is complete, the building must have these design features to meet the grant priority of improving biosecurity.
+                    When the project is complete, the building must have these biosecurity features.
                 </p>
             </div>
 
