--- a/app/views/layinghens/current/eligibility/funding/number-of-birds.html
+++ b/app/views/layinghens/current/eligibility/funding/number-of-birds.html
@@ -5,7 +5,7 @@
     {% set poultryType = data['poultry-type'] %}
 {% endif %}
 
-{% set question = 'How many birds will the new building be able to house?' %}
+{% set question = 'How many birds will this new building be able to house when it is complete?' %}
 {% if data['project-type'] == 'refurb' %}
     {% set question = 'How many birds will the refurbished part of the building be able to house?' %}
 {% endif %}
