--- a/app/views/layinghens/current/eligibility/solar/roof-support-for-solar-pv.html
+++ b/app/views/layinghens/current/eligibility/solar/roof-support-for-solar-pv.html
@@ -34,7 +34,7 @@
                     classes: 'govuk-radios--inline',
                     fieldset: {
                         legend: {
-                            text: 'Will the roof of the building be able to support solar PV panels?',
+                            text: 'Will the roof of this building be able to structurally support solar PV panels?',
                             isPageHeading: true,
                             classes: 'govuk-fieldset__legend--l'
                         }
