--- a/app/views/layinghens/current/eligibility/veranda/elim-specification.html
+++ b/app/views/layinghens/current/eligibility/veranda/elim-specification.html
@@ -26,7 +26,7 @@
                         a waterproof insulated roof
                     </li>
                     <li>
-                        a dimmable LED lighting system with a range between 0 lux and 60 lux
+                        a dimmable LED lighting system between 0 lux and 60 lux
                     </li>
                     <li>
                         a perimeter wall, at least one metre high, that includes a biosecure entrance for cleaning access
