--- a/app/views/layinghens/current/eligibility/veranda/specification.html
+++ b/app/views/layinghens/current/eligibility/veranda/specification.html
@@ -31,7 +31,7 @@
                             a waterproof insulated roof
                         </li>
                         <li>
-                            a dimmable LED lighting system with a range between 0 lux and 60 lux
+                            a dimmable LED lighting system between 0 lux and 60 lux
                         </li>
                         <li>
                             a perimeter wall, at least one metre high, that includes a biosecure entrance for cleaning access
@@ -104,7 +104,7 @@
                 </h2>
 
                 <p>
-                    The width of pop hole openings along the length of the hen house must add up to a total of 2 metres for every 1,000 hens in the building.
+                   The width of pop hole openings along the length of the internal hen house wall must add up to a total of 2 metres for every 1,000 hens in the building.
                 </p>
 
                 <p>
