--- a/app/views/layinghens/current/scoring/current-multi-tier-system.html
+++ b/app/views/layinghens/current/scoring/current-multi-tier-system.html
@@ -10,7 +10,7 @@
     {% set systemType = 'a multi-tier system' %}
 {% endif %}
 
-{% set pageHeading = 'Does your current building include ' + systemType + '?' %}
+{% set pageHeading = 'Does your building currently include ' + systemType + '?' %}
 
 {% block pageTitle %}
     {{ pageHeading }}
