--- a/app/views/layinghens/current/scoring/features.html
+++ b/app/views/layinghens/current/scoring/features.html
@@ -58,6 +58,9 @@
                         {
                             text: 'A tree shelter belt near air outlets',
                             value: 'Tree shelter belt',
+                            hint: {
+                                text: 'Planted specifically to reduce ammonia output'
+                            },
                             checked: true if 'Tree shelter belt' | isIn(data['scoring-features'])
                         },
                         {
