--- a/app/views/layinghens/current/scoring/interruption.html
+++ b/app/views/layinghens/current/scoring/interruption.html
@@ -17,7 +17,11 @@
                 </h1>
 
                 <p>
-                   Your answers to the next questions will not stop you from applying.
+                   You have passed our eligibility criteria. 
+                </p>
+
+                <p>
+                    Your answers to the next questions will help us decide which projects will be invited to make a full application.
                 </p>
 
                 <p>
