--- a/app/views/layinghens/current/scoring/multi-tier-other.html
+++ b/app/views/layinghens/current/scoring/multi-tier-other.html
@@ -9,7 +9,7 @@
 {% set poultryTypeInverse = 'pullet' %}
 {% if poultryType != 'hen' %}
     {% set systemType = 'an aviary system' %}
-    {% set poultryTypeInverse = 'hen' %}
+    {% set poultryTypeInverse = 'adult' %}
 {% endif %}
 
 {% set question = 'Will the hens in this building be reared in ' + systemType + ' as ' + poultryTypeInverse + 's?' %}}
