--- a/app/views/layinghens/current/scoring/results.html
+++ b/app/views/layinghens/current/scoring/results.html
@@ -223,7 +223,7 @@
                             Average
                         </td>
                         <td class="govuk-table__cell">
-                            Prevent birds falling from heights of more than 2 metres
+                            Reduce the risk of keel bone fractures
                         </td>
                         <td class="govuk-table__cell">
                             <a class="govuk-link govuk-link--no-visited-state" href="ramps?from-scoring=true">
@@ -235,7 +235,7 @@
                     <tr class="govuk-table__row">
                         <td class="govuk-table__cell">
                             <p class="govuk-body govuk-!-font-weight-bold govuk-!-margin-bottom-1">
-                                3 tiers or fewer
+                                Tiers directly above each other
                             </p>
                             <ul class="govuk-list govuk-list--bullet">
                                 <li>
@@ -247,7 +247,7 @@
                             Average
                         </td>
                         <td class="govuk-table__cell">
-                            Multi-tier systems that have 3 tiers or fewer
+                            Reduce the risk of keel bone fractures
                         </td>
                         <td class="govuk-table__cell">
                             <a class="govuk-link govuk-link--no-visited-state" href="tiers?from-scoring=true">
