--- a/app/views/layinghens/current/scoring/veranda-requirements.html
+++ b/app/views/layinghens/current/scoring/veranda-requirements.html
@@ -33,7 +33,7 @@
                             be at least 4 metres wide along the length of the pullet housing area, or equal to at least 30% of the indoor pullet housing area footprint
                         </li>
                         <li>
-                            have a dimmable LED lighting system with a range between 0 lux and 60 lux
+                            have a dimmable LED lighting system between 0 lux and 60 lux
                         </li>
                         <li>
                             have a solid concrete floor and waterproof insulated roof
