--- a/app/views/layinghens/current/start-page.html
+++ b/app/views/layinghens/current/start-page.html
@@ -58,14 +58,14 @@
 
        <ul class="govuk-list govuk-list--bullet">
         <li>
-          adding a veranda only to existing laying hen or pullet buildings
+          a veranda-only project, to add a veranda on to existing laying hen or pullet housing
         <li>
-           a comprehensive project, where you are refurbishing or replacing existing laying hen or pullet buildings to meet the grant funding requirements
+          a comprehensive project, to refurbish or replace existing laying hen or pullet housing in line with the grant funding requirements
         </li>
       </ul>
 
       <p>
-        If you are replacing or refurbishing a laying hen building, you must add a veranda if you have enough outside space. This must be at least either:
+        As part of a comprehensive project, you must also include a veranda if you have enough outside space. This must be at least either:
       </p>
 
       <ul class="govuk-list govuk-list--bullet">
@@ -82,7 +82,8 @@
       </p>
 
       <p>
-        You can apply for grant funding for multiple buildings. You must submit an application for each building. You cannot apply for grant funding for both comprehensive and veranda-only projects.
+        You can apply for grant funding for multiple buildings. You must submit a separate application for each building. Your applications must be for the same type of project, this
+        means you cannot apply for both comprehensive and veranda-only projects.
       </p>
       
       <p>
@@ -90,7 +91,7 @@
       </p>
 
       <p>
-        The minimum grant is £15,000 (40% of £37,500) for comprehensive projects or £5,000 (40% of £12,500) for veranda-only projects.
+        The minimum grant is £15,000 (40% of £37,500) for comprehensive projects or £5,000 (40% of £12,500) for veranda-only.
       </p>
 
       <p>
