--- a/app/views/layinghens/current/details/applicant-details.html
+++ b/app/views/layinghens/current/details/applicant-details.html
@@ -13,7 +13,7 @@
         <form action="check-answers">
 
             <h1 class="govuk-heading-l">
-                Applicant details
+                Applicant's details
             </h1>
 
             {{ govukInput ({
@@ -50,6 +50,16 @@
             }) }}
 
             {{ govukInput ({
+                id: 'confirm-email',
+                name: 'confirm-email',
+                classes: 'govuk-!-width-two-thirds',
+                value: data['confirm-email'] if data['confirm-email'] else '',
+                label: {
+                    text: 'Confirm email address'
+                }
+            }) }}
+
+            {{ govukInput ({
                 id: 'farmer-landline',
                 name: 'farmer-landline',
                 classes: 'govuk-!-width-two-thirds',
@@ -58,7 +68,20 @@
                     text: 'We will only use this to contact you about your application'
                 },
                 label: {
-                    text: 'Telephone number'
+                    text: 'Landline number'
+                }
+            }) }}
+
+            {{ govukInput ({
+                id: 'farmer-mobile',
+                name: 'farmer-mobile',
+                classes: 'govuk-!-width-two-thirds',
+                value: data['farmer-mobile'] if data['farmer-mobile'] else '',
+                hint: {
+                    text: 'We will only use this to contact you about your application'
+                },
+                label: {
+                    text: 'Mobile number'
                 }
             }) }}
 
@@ -103,15 +126,31 @@
                 autocomplete: 'address-town'
               }) }}
 
-              {{ govukInput({
-                label: {
-                  text: 'County (optional)'
-                },
+              {{ govukSelect({
                 id: 'farmer-county',
                 name: 'farmer-county',
-                classes: 'govuk-!-width-one-half',
-                value: data['farmer-county'] if data['farmer-county'] else '',
-                autocomplete: 'address-county'
+                label: {
+                  text: 'County'
+                },
+                items: [
+                  {
+                    value: 'greater-london',
+                    text: 'Greater London'
+                  },
+                  {
+                    value: 'west-midlands',
+                    text: 'West Midlands',
+                    selected: true
+                  },
+                  {
+                    value: 'greater-manchester',
+                    text: 'Greater Manchester'
+                  },
+                  {
+                    value: 'west-yorkshire',
+                    text: 'West Yorkshire'
+                  }
+                ]
               }) }}
 
               {{ govukInput({
