--- a/app/views/layinghens/current/eligibility/aviary-pullets/elim-multi-tier-step-up.html
+++ b/app/views/layinghens/current/eligibility/aviary-pullets/elim-multi-tier-step-up.html
@@ -20,7 +20,7 @@
 
                 <ul class="govuk-list govuk-list--bullet">
                     <li>
-                        height-adjustable tiers that may include food and water at, or before, 10 days
+                        height-adjustable tiers with food and water that birds can access after 10 days
                     </li>
                     <li>
                         welfare ramps
