--- a/app/views/layinghens/current/eligibility/biosecurity/concrete-apron.html
+++ b/app/views/layinghens/current/eligibility/biosecurity/concrete-apron.html
@@ -18,11 +18,6 @@
 
             <form method="post">
 
-            {% set nextPage = 'egg-store' %}
-            {% if poultryType != 'hen' %}
-                {% set nextPage = 'vaccination-lobby' %}
-            {% endif %}
-
             {{ govukRadios ({
                 idPrefix: 'concrete-apron',
                 name: 'concrete-apron',
@@ -35,7 +30,7 @@
                     }
                 },
                 hint: {
-                    text: 'This should be continuous, unless there needs to be a gap where birds have direct access to pasture'
+                    text: 'This should be continuous, unless there needs to be a gap where birds have direct access to a range'
                 },
                 items: [
                     {
@@ -43,7 +38,7 @@
                         value: 'Yes',
                         checked: true if data['concrete-apron'] == 'Yes',
                         attributes: {
-                                'data-next': nextPage
+                                'data-next': 'egg-store'
                             }
                     },
                      {
@@ -72,7 +67,7 @@
                 <span class="app-step-nav-related__pretitle">Eligibility</span>
                 </h2>
                 <p>
-                    The building (and veranda if there is one) must be surrounded by a concrete apron.
+                    The building (and veranda if there is one) must have a concrete apron to help keep the area around the building clean and discourage nesting wildlife.
                 </p>
             </div>
 
