--- a/app/views/layinghens/current/eligibility/building/elim-pullet-requirements.html
+++ b/app/views/layinghens/current/eligibility/building/elim-pullet-requirements.html
@@ -20,7 +20,7 @@
 
                 <ul class="govuk-list govuk-list--bullet">
                     <li>
-                        a useable area provided over a range of bird-accessible heights from 10 days of age
+                        a useable area at multiple bird-accessible heights from 10 days of age
                     </li>
                     <li>
                         height adjustable perches at equal to or more than 8cm per pullet
