--- a/app/views/layinghens/current/eligibility/common/project-type.html
+++ b/app/views/layinghens/current/eligibility/common/project-type.html
@@ -55,7 +55,7 @@
                             value: 'refurb',
                             checked: true if data['project-type'] == 'refurb',
                             hint: {
-                                text: 'Adding features to an existing building, like a mechanical ventilation system, LED lighting system, aviary or multi-tier system'
+                                text: 'A comprehensive project to upgrading an existing building by adding mechanical ventilation, LED lighting and an aviary or multi-tier system where they do not exist already'
                             },
                             attributes: {
                                 'data-next': 'farmer-type'
@@ -66,7 +66,7 @@
                             value: 'replace',
                             checked: true if data['project-type'] == 'replace',
                             hint: {
-                                text: 'This must include the required high welfare features, like a mechanical ventilation system, LED lighting system, aviary or multi-tier system'
+                                text: 'A comprehensive project to include mechanical ventilation, LED lighting and an aviary or multi-tier system'
                             },
                             attributes: {
                                 'data-next': 'farmer-type'
@@ -104,10 +104,6 @@
                     This grant is only for laying hen or pullet projects.
                 </p>
 
-                <p>
-                    You can apply for grant funding for either comprehensive or veranda-only projects.
-                </p>
-                
                 <p>
                     The maximum grant funding each business can apply for is £500,000 for comprehensive projects, or £100,000 for veranda-only projects.
                 </p>
