--- a/app/views/layinghens/current/eligibility/veranda/waitlist.html
+++ b/app/views/layinghens/current/eligibility/veranda/waitlist.html
@@ -17,20 +17,20 @@
                 </h1>
 
                 <p>
-                    The veranda grant funding is awarded on a first come, first served basis. We are not currently accepting applications for veranda grant funding.
+                    The veranda-only grant funding is awarded on a first come, first served basis. We are not currently accepting applications for veranda-only grant funding. 
                 </p>
 
                 <p>
-                    You can check your eligibility and provide your business details to <a href="../common/farmer-type">register your interest for veranda grant funding. </a> The RPA will contact you if funding becomes available.
+                    You can check your eligibility and provide your business details to <a href="../common/farmer-type">register your interest for veranda-only grant funding. </a> The RPA will contact you if funding becomes available.
                 </p>
 
                 <p>
-                    Alternatively, you can check if you are eligible for grant funding to refurbish or replace laying hen or pullet housing.
+                    Alternatively, you can check if you are eligible for comprehensive grant funding to refurbish or replace laying hen or pullet buildings.
                 </p>
 
                 <p>
-                    <a href="#">
-                        Check if you are eligible for housing grant funding
+                    <a href="../../start-page">
+                        Check if you are eligible for comprehensive grant funding
                     </a>
                 </p>
 
