--- a/app/views/layinghens/current/scoring/results.html
+++ b/app/views/layinghens/current/scoring/results.html
@@ -411,7 +411,7 @@
                             Average
                         </td>
                         <td class="govuk-table__cell">
-                            Use of polution mitigation practices
+                            Use of pollution mitigation practices
                         </td>
                         <td class="govuk-table__cell">
                             <a class="govuk-link govuk-link--no-visited-state" href="features?from-scoring=true">
