--- a/app/views/layinghens/current/start-page.html
+++ b/app/views/layinghens/current/start-page.html
@@ -82,8 +82,7 @@
       </p>
 
       <p>
-        You can apply for grant funding for multiple buildings. You must submit a separate application for each building. Your applications must be for the same type of project, this
-        means you cannot apply for both comprehensive and veranda-only projects.
+        You can apply for grant funding for multiple buildings. You must submit a separate application for each building. You cannot apply for both comprehensive and veranda-only projects.
       </p>
       
       <p>
