--- a/app/views/layinghens/current/details/check-answers.html
+++ b/app/views/layinghens/current/details/check-answers.html
@@ -131,7 +131,7 @@
               <tr class="govuk-table__row">
                   <div class="govuk-summary-list__row--no-border">
                       <dt class="govuk-summary-list__key">
-                          <p class="govuk-heading-m"><strong>Agent details</strong></p>
+                          <p class="govuk-heading-m"><strong>Agent's details</strong></p>
                       </dt>
                       <dd class="govuk-summary-list__actions">
                           <a class="govuk-link govuk-body" href="agent-details">
@@ -202,7 +202,7 @@
         <tr class="govuk-table__row">
             <div class="govuk-summary-list__row--no-border">
                 <dt class="govuk-summary-list__key">
-                    <p class="govuk-heading-m"><strong>Applicant details</strong></p>
+                    <p class="govuk-heading-m"><strong>Applicant's details</strong></p>
                 </dt>
                 <dd class="govuk-summary-list__actions">
                     <a class="govuk-link govuk-body" href="applicant-details">
