--- a/app/views/layinghens/current/scoring/interruption.html
+++ b/app/views/layinghens/current/scoring/interruption.html
@@ -13,7 +13,7 @@
             <div class="govuk-grid-column-two-thirds">
 
                 <h1 class="govuk-heading-l">
-                    We will now score your project against our funding priorities
+                   You have passed our eligibility criteria. 
                 </h1>
 
                 <p>
@@ -21,7 +21,7 @@
                 </p>
 
                 <p>
-                    Your answers to the next questions will help us decide which projects will be invited to make a full application.
+                    Your answers to the next questions will help us decide which projects we will invite to make a full application.
                 </p>
 
                 <p>
