consistent housing change

--- a/app/views/layinghens/current/scoring/multi-tier-hen.html
+++ b/app/views/layinghens/current/scoring/multi-tier-hen.html
@@ -31,16 +31,16 @@
                     items: [
                         {
                             text: 'Yes',
-                            value: 'Yes',
-                            checked: true if data['multi-tier-hen'] == 'Yes',
+                            value: 'Yes, the hens will be reared in a multi-tier system as pullets',
+                            checked: true if data['multi-tier-hen'] == 'Yes, the hens will be reared in a multi-tier system as pullets',
                             attributes: {
                                 'data-next': 'natural-light'
                             }
                         },
                         {
                             text: 'No',
-                            value: 'No',
-                            checked: true if data['multi-tier-hen'] == 'No',
+                            value: 'No, the hens will not be reared in a multi-tier system as pullets',
+                            checked: true if data['multi-tier-hen'] == 'No, the hens will not be reared in a multi-tier system as pullets',
                              attributes: {
                                 'data-next': 'natural-light'
                             }
