--- a/app/views/layinghens/current/scoring/multi-tier-pullet.html
+++ b/app/views/layinghens/current/scoring/multi-tier-pullet.html
@@ -31,16 +31,16 @@
                     items: [
                         {
                             text: 'Yes',
-                            value: 'Yes',
-                            checked: true if data['multi-tier-pullet'] == 'Yes',
+                            value: 'Yes, the pullets will be housed in an aviary system as adults',
+                            checked: true if data['multi-tier-pullet'] == 'Yes, the pullets will be housed in an aviary system as adults',
                             attributes: {
                                 'data-next': 'natural-light'
                             }
                         },
                         {
                             text: 'No',
-                            value: 'No',
-                            checked: true if data['multi-tier-pullet'] == 'No',
+                            value: 'No, the pullets will not be housed in an aviary system as adults',
+                            checked: true if data['multi-tier-pullet'] == 'No, the pullets will not be housed in an aviary system as adults',
                              attributes: {
                                 'data-next': 'natural-light'
                             }
