updates to start page content

--- a/app/views/layinghens/current/start-page.html
+++ b/app/views/layinghens/current/start-page.html
@@ -82,7 +82,7 @@
       </p>
 
       <p>
-        You can apply for grant funding for multiple buildings. You must submit a separate application for each building. You cannot apply for both comprehensive and veranda-only projects.
+        You must submit a separate application for each building if you are applying for grant funding for multiple buildings. You cannot apply for both comprehensive and veranda-only projects.
       </p>
       
       <p>
