--- a/app/views/layinghens/current/scoring/interruption.html
+++ b/app/views/layinghens/current/scoring/interruption.html
@@ -13,11 +13,11 @@
             <div class="govuk-grid-column-two-thirds">
 
                 <h1 class="govuk-heading-l">
-                   You have passed our eligibility criteria. 
+                   We will now score your project against our funding priorities
                 </h1>
 
                 <p>
-                   You have passed our eligibility criteria. 
+                   You have passed our eligibility criteria.
                 </p>
 
                 <p>
