--- a/app/views/layinghens/current/eligibility/biosecurity/elim-concrete-apron.html
+++ b/app/views/layinghens/current/eligibility/biosecurity/elim-concrete-apron.html
@@ -19,7 +19,7 @@
                 </p>
 
                 <p>
-                    This should be continuous, unless there needs to be a gap where birds have direct access to a range
+                    This should be continuous, unless there needs to be a gap where birds have direct access to a range.
                 </p>
 
                 <p>
