--- a/app/views/layinghens/current/scoring/multi-tier-hen.html
+++ b/app/views/layinghens/current/scoring/multi-tier-hen.html
@@ -18,8 +18,8 @@
             <form method="post">
 
                 {{ govukRadios ({
-                    idPrefix: 'multi-tier-hen',
-                    name: 'multi-tier-hen',
+                    idPrefix: 'scoring-consistent-housing',
+                    name: 'scoring-consistent-housing',
                     classes: 'govuk-radios',
                     fieldset: {
                         legend: {
@@ -32,7 +32,7 @@
                         {
                             text: 'Yes',
                             value: 'Yes, the hens will be reared in a multi-tier system as pullets',
-                            checked: true if data['multi-tier-hen'] == 'Yes, the hens will be reared in a multi-tier system as pullets',
+                            checked: true if data['scoring-consistent-housing'] == 'Yes, the hens will be reared in a multi-tier system as pullets',
                             attributes: {
                                 'data-next': 'natural-light'
                             }
@@ -40,7 +40,7 @@
                         {
                             text: 'No',
                             value: 'No, the hens will not be reared in a multi-tier system as pullets',
-                            checked: true if data['multi-tier-hen'] == 'No, the hens will not be reared in a multi-tier system as pullets',
+                            checked: true if data['scoring-consistent-housing'] == 'No, the hens will not be reared in a multi-tier system as pullets',
                              attributes: {
                                 'data-next': 'natural-light'
                             }
@@ -51,7 +51,7 @@
                         {
                             text: 'I don’t know',
                             value: 'I don’t know',
-                            checked: true if data['multi-tier-hen'] == 'I don’t know',
+                            checked: true if data['scoring-consistent-housing'] == 'I don’t know',
                              attributes: {
                                 'data-next': 'natural-light'
                             }
