--- a/app/views/layinghens/current/scoring/multi-tier-pullet.html
+++ b/app/views/layinghens/current/scoring/multi-tier-pullet.html
@@ -18,8 +18,8 @@
             <form method="post">
 
                 {{ govukRadios ({
-                    idPrefix: 'multi-tier-pullet',
-                    name: 'multi-tier-pullet',
+                    idPrefix: 'scoring-consistent-housing',
+                    name: 'scoring-consistent-housing',
                     classes: 'govuk-radios',
                     fieldset: {
                         legend: {
@@ -32,7 +32,7 @@
                         {
                             text: 'Yes',
                             value: 'Yes, the pullets will be housed in an aviary system as adults',
-                            checked: true if data['multi-tier-pullet'] == 'Yes, the pullets will be housed in an aviary system as adults',
+                            checked: true if data['scoring-consistent-housing'] == 'Yes, the pullets will be housed in an aviary system as adults',
                             attributes: {
                                 'data-next': 'natural-light'
                             }
@@ -40,7 +40,7 @@
                         {
                             text: 'No',
                             value: 'No, the pullets will not be housed in an aviary system as adults',
-                            checked: true if data['multi-tier-pullet'] == 'No, the pullets will not be housed in an aviary system as adults',
+                            checked: true if data['scoring-consistent-housing'] == 'No, the pullets will not be housed in an aviary system as adults',
                              attributes: {
                                 'data-next': 'natural-light'
                             }
