--- a/app/views/layinghens/current/eligibility/common/project-type.html
+++ b/app/views/layinghens/current/eligibility/common/project-type.html
@@ -55,7 +55,7 @@
                             value: 'refurb',
                             checked: true if data['project-type'] == 'refurb',
                             hint: {
-                                text: 'A comprehensive project to upgrading an existing building by adding mechanical ventilation, LED lighting and an aviary or multi-tier system where they do not exist already'
+                                text: 'A comprehensive project to upgrade an existing building by adding mechanical ventilation, LED lighting and an aviary or multi-tier system where they do not exist already'
                             },
                             attributes: {
                                 'data-next': 'farmer-type'
