--- a/app/views/layinghens/current/start-page.html
+++ b/app/views/layinghens/current/start-page.html
@@ -65,7 +65,7 @@
       </ul>
 
       <p>
-        As part of a comprehensive project, you must also include a veranda if you have enough outside space. This must be at least either:
+        As part of a comprehensive project for laying hens, you must also include a veranda if you have enough outside space. This must be at least either:
       </p>
 
       <ul class="govuk-list govuk-list--bullet">
